minews-1: folders are ordered and feeds are gotten

--- a/client/app/public/styles/main.scss
+++ b/client/app/public/styles/main.scss
@@ -17,5 +17,5 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 
 // Component styles are injected through grunt
 // injector
-@import 'public/styles/main.scss';
+@import 'main/main.scss';
 // endinjector
